fix for refresh button in alert center being too close to the Previous text

--- a/ui_plugins/public/hqu.css
+++ b/ui_plugins/public/hqu.css
@@ -271,4 +271,5 @@ font-weight:bold;
     padding-right:15px;
     background-image: url( "images/ajax-loader-blue.gif" );
     background-repeat: no-repeat;
+    background-position: top left;
 }
